--- a/phantom/Makefile.inc
+++ b/phantom/Makefile.inc
@@ -8,36 +8,36 @@ $(eval $(call MODULE,io_client))
 $(eval $(call MODULE,io_client/ipv4))
 $(eval $(call MODULE,io_client/ipv6))
 $(eval $(call MODULE,io_client/local))
-$(eval $(call MODULE,io_client/proto_none,,,-lpthread))
-$(eval $(call MODULE,io_client/proto_fcgi,,,-lpthread))
+$(eval $(call MODULE,io_client/proto_none,,,pthread))
+$(eval $(call MODULE,io_client/proto_fcgi,,,pthread))
 
-$(eval $(call MODULE,io_stream,,,-lpthread))
+$(eval $(call MODULE,io_stream,,,pthread))
 $(eval $(call MODULE,io_stream/ipv4))
 $(eval $(call MODULE,io_stream/ipv6))
 #$(eval $(call MODULE,io_stream/local))
 $(eval $(call MODULE,io_stream/proto_monitor))
 $(eval $(call MODULE,io_stream/proto_echo))
-$(eval $(call MODULE,io_stream/proto_http,,,-lpthread))
+$(eval $(call MODULE,io_stream/proto_http,,,pthread))
 $(eval $(call MODULE,io_stream/proto_http/handler_null))
 $(eval $(call MODULE,io_stream/proto_http/handler_static))
-$(eval $(call MODULE,io_stream/proto_http/handler_proxy,,,-lpthread))
+$(eval $(call MODULE,io_stream/proto_http/handler_proxy,,,pthread))
 $(eval $(call MODULE,io_stream/proto_http/handler_fcgi))
 
-$(eval $(call MODULE,io_benchmark,,,-lm -lpthread))
-$(eval $(call MODULE,io_benchmark/method_stream,,,-lpthread))
-$(eval $(call MODULE,io_benchmark/method_stream/ipv4,,,-lpthread))
-$(eval $(call MODULE,io_benchmark/method_stream/ipv6,,,-lpthread))
+$(eval $(call MODULE,io_benchmark,,,m pthread))
+$(eval $(call MODULE,io_benchmark/method_stream,,,pthread))
+$(eval $(call MODULE,io_benchmark/method_stream/ipv4,,,pthread))
+$(eval $(call MODULE,io_benchmark/method_stream/ipv6,,,pthread))
 $(eval $(call MODULE,io_benchmark/method_stream/local))
 $(eval $(call MODULE,io_benchmark/method_stream/proto_none))
-$(eval $(call MODULE,io_benchmark/method_stream/proto_http,,,-lpthread))
-$(eval $(call MODULE,io_benchmark/method_stream/source_random,,,-lpthread))
+$(eval $(call MODULE,io_benchmark/method_stream/proto_http,,,pthread))
+$(eval $(call MODULE,io_benchmark/method_stream/source_random,,,pthread))
 $(eval $(call MODULE,io_benchmark/method_stream/source_log))
 
-$(eval $(call MODULE,ssl,_ssl,ssl,-lssl -lcrypto -lpthread))
+$(eval $(call MODULE,ssl,_ssl,ssl,ssl crypto pthread))
 $(eval $(call MODULE,io_stream/transport_ssl,_ssl))
 $(eval $(call MODULE,io_benchmark/method_stream/transport_ssl,_ssl))
 
-$(eval $(call MODULE,debug,_debug,debug,-lbfd))
+$(eval $(call MODULE,debug,_debug,debug,bfd))
 
 $(targets_phantom_module): phantom/module.mk
 
